# FEFU_SD

./: .gitignore  README.MD  main.py  pyproject.toml  requirements.txt
2026-02-27/: t1.py
2026-03-13/: main.ipynb
2026-03-27/: cpe_examples.py  purl_examples.py
p1/: bookshop.db  result.json  t2.ipynb  t2.py
