[project]
name = "fefu-sd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cpe>=1.3.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "packageurl-python>=0.17.6",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
